Refactor: 유저 엔티티에 패널티 추가 및 시간과 패널티 수를 반환하도록 DTO 수정