@@ -1,5 +1,6 @@
 package leets.weeth.domain.penalty.service;
 
+import jakarta.transaction.Transactional;
 import leets.weeth.domain.penalty.dto.RequestPenalty;
 import leets.weeth.domain.penalty.dto.ResponsePenalty;
 import leets.weeth.domain.penalty.entity.Penalty;
@@ -10,12 +11,10 @@ import leets.weeth.global.common.error.exception.custom.PenaltyNotFoundException
 import leets.weeth.global.common.error.exception.custom.UserNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -23,17 +22,20 @@ import java.util.stream.Collectors;
 public class PenaltyService {
     private final PenaltyRepository penaltyRepository;
     private final UserRepository userRepository;
+    @Transactional
     public void assignPenalty(RequestPenalty requestPenalty){
         User userToBan = userRepository.findById(requestPenalty.getUserId()).orElseThrow(UserNotFoundException::new);
-        penaltyRepository.save(Penalty.toEntity(requestPenalty, userToBan));
+        Penalty penalty = penaltyRepository.save(Penalty.toEntity(requestPenalty, userToBan));
+        userToBan.addPenalty(penalty);
     }
 
     public List<ResponsePenalty> getMyPenalties(Long userId){
         User currentUser = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
-        List<Penalty> myPenalties = penaltyRepository.findByUserId(userId, Sort.by(Sort.Direction.ASC, "id"));
-        return myPenalties.stream()
+        currentUser.getPenalties().sort(Comparator.comparing(Penalty::getId));
+
+        return currentUser.getPenalties().stream()
                 .map(ResponsePenalty::createResponsePenaltyDTO) // Post -> ResponsePostDTO 변환
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void removePenalty(Long penaltyId) {
